--- a/corevaulter-server/package.json
+++ b/corevaulter-server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "corevaulter-server",
   "version": "1.0.0",
-  "main": "Index.ts",
+  "main": "index.ts",
   "scripts": {
-    "start": "node api/Index.ts",
-    "dev": "nodemon api/Index.ts",
+    "start": "node api/index.ts",
+    "dev": "nodemon api/index.ts",
     "build": "tsc",
     "lint": "eslint . --ext .ts,.js"
   },
